; ModuleID = '/home/carl/AnghaBench/RetroArch/wii/libogc/libogc/extr_si.c_SI_GetResponse.c'
source_filename = "/home/carl/AnghaBench/RetroArch/wii/libogc/libogc/extr_si.c_SI_GetResponse.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@inputBufferValid = common dso_local global i64* null, align 8
@inputBuffer = common dso_local global i64** null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @SI_GetResponse(i64 %0, i8* %1) #0 {
  %3 = alloca i64, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i64, align 8
  store i64 %0, i64* %3, align 8
  store i8* %1, i8** %4, align 8
  %7 = load i64, i64* %5, align 8
  %8 = call i32 @_CPU_ISR_Disable(i64 %7)
  %9 = load i64, i64* %3, align 8
  %10 = call i32 @SI_GetResponseRaw(i64 %9)
  %11 = load i64*, i64** @inputBufferValid, align 8
  %12 = load i64, i64* %3, align 8
  %13 = getelementptr inbounds i64, i64* %11, i64 %12
  %14 = load i64, i64* %13, align 8
  store i64 %14, i64* %6, align 8
  %15 = load i64*, i64** @inputBufferValid, align 8
  %16 = load i64, i64* %3, align 8
  %17 = getelementptr inbounds i64, i64* %15, i64 %16
  store i64 0, i64* %17, align 8
  %18 = load i64, i64* %6, align 8
  %19 = icmp ne i64 %18, 0
  br i1 %19, label %20, label %39

20:                                               ; preds = %2
  %21 = load i64**, i64*** @inputBuffer, align 8
  %22 = load i64, i64* %3, align 8
  %23 = getelementptr inbounds i64*, i64** %21, i64 %22
  %24 = load i64*, i64** %23, align 8
  %25 = getelementptr inbounds i64, i64* %24, i64 0
  %26 = load i64, i64* %25, align 8
  %27 = load i8*, i8** %4, align 8
  %28 = bitcast i8* %27 to i64*
  %29 = getelementptr inbounds i64, i64* %28, i64 0
  store i64 %26, i64* %29, align 8
  %30 = load i64**, i64*** @inputBuffer, align 8
  %31 = load i64, i64* %3, align 8
  %32 = getelementptr inbounds i64*, i64** %30, i64 %31
  %33 = load i64*, i64** %32, align 8
  %34 = getelementptr inbounds i64, i64* %33, i64 1
  %35 = load i64, i64* %34, align 8
  %36 = load i8*, i8** %4, align 8
  %37 = bitcast i8* %36 to i64*
  %38 = getelementptr inbounds i64, i64* %37, i64 1
  store i64 %35, i64* %38, align 8
  br label %39

39:                                               ; preds = %20, %2
  %40 = load i64, i64* %5, align 8
  %41 = call i32 @_CPU_ISR_Restore(i64 %40)
  %42 = load i64, i64* %6, align 8
  ret i64 %42
}

declare dso_local i32 @_CPU_ISR_Disable(i64) #1

declare dso_local i32 @SI_GetResponseRaw(i64) #1

declare dso_local i32 @_CPU_ISR_Restore(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
